--- a/test/cookbooks/docker_compose_test/files/default/docker-compose_nginx.yml
+++ b/test/cookbooks/docker_compose_test/files/default/docker-compose_nginx.yml
@@ -1,6 +1,14 @@
 version: '2'
 services:
-  web_server:
+  web_server_1:
     image: nginx
     ports:
-      - "8888:80"
+      - "8001:80"
+  web_server_2:
+    image: nginx
+    ports:
+      - "8002:80"
+  web_server_3:
+    image: nginx
+    ports:
+      - "8003:80"
